@@ -1,0 +1,2 @@
+<http://example.org/s>
+	<http://example.org/p> <manifest.ttl> .
