@@ -12,6 +12,7 @@ serd (0.31.0) unstable; urgency=medium
   * Fix incorrect parsing of strange quote escape patterns
   * Fix possible hang when writing nested Turtle lists
   * Fix potential memory leaks when a write is aborted
+  * Fix relative URI creation
   * Gracefully handle bad characters in Turtle blank node syntax
   * Gracefully handle bad characters in Turtle datatype syntax
   * Improve TriG pretty-printing and remove trailing newlines
@@ -20,7 +21,7 @@ serd (0.31.0) unstable; urgency=medium
   * Replace duplicated dox_to_sphinx script with sphinxygen dependency
   * Test header for warnings more strictly
 
- -- David Robillard <d@drobilla.net>  Sun, 26 Mar 2023 23:59:39 +0000
+ -- David Robillard <d@drobilla.net>  Wed, 29 Mar 2023 23:55:55 +0000
 
 serd (0.30.16) stable; urgency=medium
 
